# AlphaORACLE

./: LICENSE  README.md  pyproject.toml
config/: analyze_structures.json  human_embeddings.json  run_classifier.json  train_classifier.json  yeast_embeddings.json
inputs/: Ortholog_mapping.csv  optimized_interaction_classifier.pt
inputs/classifier_training/: training_avg_models.csv  training_data.csv  training_iptm.csv
inputs/networks/: biogrid_human.txt  biogrid_yeast.txt  cellmap_negative.txt  cellmap_similarity.txt  mann.txt  opencell.txt
src/: cli.py  run_alphaoracle.py
src/alphaoracle/training/: train_alphaoracle.py  train_embeddings.py
src/alphaoracle/utils/: analyze_contacts.py  classifier_args.py  data_loader.py  embeddings_args.py  embeddings_data_preprocess.py  embeddings_plots.py  embeddings_sampler.py  multiGAT.py  pdb_contact_args.py  weightedGAT.py
